fixed: desktop support

--- a/css/settings.css
+++ b/css/settings.css
@@ -1257,7 +1257,7 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 }
 .support-box-list > ul{
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(1, 1fr);
 	gap: 20px;
 }
 .support-box-list > ul > li{
@@ -2559,4 +2559,10 @@ li.draggable-item .components-panel__body-toggle.components-button{
         -webkit-transform: rotate(360deg); 
         transform:rotate(360deg); 
     } 
+}
+
+@media (min-width: 768px) {
+	.support-box-list > ul{
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
