--- a/css/settings.css
+++ b/css/settings.css
@@ -852,7 +852,6 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 }
 .btn.btn-block{
 	display: block;
-	width: 100%;
 	text-align: center;
 }
 .btn.btn-lg{
@@ -1256,13 +1255,13 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 	padding: 30px 0 24px;
 }
 .support-box-list > ul{
-	display: flex;
-	flex-wrap: wrap;
-	margin: 0 -15px;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	gap: 20px;
 }
 .support-box-list > ul > li{
-	width: 50%;
-	padding: 0 15px 30px;
+	width: 100%;
+	display: flex;
 }
 .support-box-list .cta{
 	text-align: center;
@@ -1270,8 +1269,10 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 
 .support-box{
 	border: 1px solid #D9D9D9;
-	padding: 40px 30px 30px;
-	height: 100%;
+	padding: 0 30px 30px;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
 }
 .support-box .h3{
 	padding-bottom: 16px;
@@ -1281,11 +1282,13 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 	line-height: 24px;
 	color: #050505;
 	margin-bottom: 24px;
+	flex-grow: 1;
 }
 
 .quick-link-list{
 	display: flex;
 	flex-wrap: wrap;
+	flex-grow: 10;
 }
 .quick-link-list ul{
 	width: 50%;
@@ -1415,10 +1418,11 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 
 .fz-pro-features-table-row{
 	display: flex;
-	flex-wrap: wrap;
+	margin: 0;
 }
 .fz-pro-features-table-row .features-info{
 	width: calc(100% - 280px);
+	margin-bottom: 0;
 }
 .fz-pro-features-table-row .free,
 .fz-pro-features-table-row .pro{
@@ -1428,6 +1432,7 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin-bottom: 0;
 }
 .fz-pro-features-table-row .free .dashicons,
 .fz-pro-features-table-row .pro .dashicons{
@@ -1446,7 +1451,10 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 	font-size: 20px;
 	font-weight: 700;
 	color: #757575;
-	padding-bottom: 16px;
+	padding-bottom: 28px;
+}
+.fz-pro-features-table-header .fz-pro-features-table-row li {
+    padding: 0 44px;
 }
 .fz-pro-features-table-body{
 	border-top: 1px solid #D9D9D9;
@@ -2555,4 +2563,10 @@ li.draggable-item .components-panel__body-toggle.components-button{
         -webkit-transform: rotate(360deg); 
         transform:rotate(360deg); 
     } 
+}
+
+@media (min-width: 768px) {
+	.support-box-list > ul{
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
