--- a/css/settings.css
+++ b/css/settings.css
@@ -531,7 +531,7 @@ fieldset[disabled] .form-control {
 	content: "";
 	width: 24px;
 	height: 24px;
-	background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 18L14 14.5' stroke='%23757575' stroke-width='1.5'/%3E%3Ccircle r='4.75' transform='matrix(-1 0 0 1 10.5 11.5)' stroke='%23757575' stroke-width='1.5'/%3E%3C/svg%3E%0A");
+	background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 18L14 14.5' stroke='%23757575' stroke-width='1.5'/%3E%3Ccircle r='4.75' transform='matrix(-1 0 0 1 10.5 11.5)' stroke='%23757575' stroke-width='1.5'/%3E%3C/svg%3E");
 	background-repeat: no-repeat;
 	position: absolute;
 	left: 16px;
@@ -1530,7 +1530,7 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 }
 
 .post-type-feedzy_categories #titlediv #title:focus,
-.post-type-feedzy_categories .widefat:focus{
+.post-type_feedzy_categories .widefat:focus{
 	border-color: #4268CF;
 }
 .fz-upsell-notice {
@@ -2582,4 +2582,11 @@ li.draggable-item .components-panel__body-toggle.components-button{
 .fz-section-description p {
     margin: 0 0 10px 0;
     line-height: 1.6;
+}
+
+.fz-form-actions {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 15px;
 }
