--- a/css/settings.css
+++ b/css/settings.css
@@ -1418,6 +1418,7 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 
 .fz-pro-features-table-row{
 	display: flex;
+	flex-wrap: wrap;
 	margin: 0;
 }
 .fz-pro-features-table-row .features-info{
