--- a/css/settings.css
+++ b/css/settings.css
@@ -111,6 +111,11 @@
 	vertical-align: super;
 }
 
+.pro-disabled-item {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
 .post-type-feedzy_imports:not(.edit-post) .wrap div#side-sortables{
 	display: none;
 }
