refactor: rename action button class

--- a/css/settings.css
+++ b/css/settings.css
@@ -2665,7 +2665,7 @@ li.draggable-item .components-panel__body-toggle.components-button{
     margin-bottom: 8px;
 }
 
-button.action-button {
+button.feedzy-action-button {
 	padding: 13px 0px;
 	height: 0px;
     font-size: 16px;
