refactor: css format

--- a/css/settings.css
+++ b/css/settings.css
@@ -111,7 +111,7 @@
 	vertical-align: super;
 }
 
-.pro-disabled-item {
+.fz-pro-disabled-item {
     opacity: 0.6;
 }
 
@@ -1899,10 +1899,12 @@ span.error-message .components-external-link .components-visually-hidden{
 	border-radius: 8px;
 }
 .popover-action-list ul{
+	display: flex;
+	flex-direction: column;
+	gap: 14px;
 	margin: 0;
 }
 .popover-action-list ul li{
-	padding-bottom: 13px;
 	margin-bottom: 0;
 	font-size: 16px;
 	font-weight: 400;
@@ -2666,12 +2668,12 @@ li.draggable-item .components-panel__body-toggle.components-button{
 }
 
 button.feedzy-action-button {
-	padding: 13px 0px;
-	height: 0px;
+	padding: 0;
 	font-size: 16px;
 	font-weight: 400;
 	background: none;
 	border: none;
 	width: 100%;
 	cursor: pointer;
+	height: unset;
 }
