--- a/css/settings.css
+++ b/css/settings.css
@@ -2620,6 +2620,29 @@ li.draggable-item .components-panel__body-toggle.components-button{
 	color: #050505;
 }
 
+.validate-feeds-actions {
+	display: flex;;
+}
+.validate-feeds-actions .spinner:not(.is-active) {
+	display: none;
+}
+.validate-feeds-actions .spinner.is-active {
+	display: inline-block;
+}
+.feedzy-preview-list {
+	padding-left: 15px;
+}
+.feedzy-preview-list li {
+	list-style: disc;
+}
+.feedzy-preview-list li a {
+	text-decoration: none;
+}
+.feedzy-preview-list li time {
+	font-size: 11px;
+	font-weight: 500;
+	color: #757575;
+}
 @-webkit-keyframes spin { 
     100% { -webkit-transform: rotate(360deg); } 
 }
