--- a/css/settings.css
+++ b/css/settings.css
@@ -93,6 +93,9 @@
 .mx-320{
 	max-width: 320px;
 }
+.position-relative{position: relative;}
+.position-absolute{position: absolute;}
+
 .feedzy-wrap a:not(#fz-feedback-btn):focus{
 	box-shadow: none;
 	outline: 0;
@@ -140,12 +143,17 @@
 }
 
 /* feedzy accordion style start */
+.feedzy-accordion-item,
+.feedzy-accordion-item *{
+	font-size: 15px !important;
+}
 .feedzy-accordion-item{
 	background: #ffffff;
 	border: 1px solid #D9D9D9;
 }
 .feedzy-accordion-item__title{
 	position: relative;
+	padding: 8px 15px;
 }
 .fdz-upgrade-link{
 	width: 100%;
@@ -169,33 +177,37 @@
 	border: 0;
 	background: transparent;
 	outline: 0;
-	padding: 30px 90px 30px 30px;
+	padding: 10px;
 }
 .feedzy-accordion-item .feedzy-accordion__step-number{
 	padding-bottom: 10px;
 }
 .feedzy-accordion-item .feedzy-accordion__step-title{
 	color: #050505;
+	line-height: 1.3;
 }
 .feedzy-accordion-item .feedzy-accordion__icon{
 	position: absolute;
 	right: 30px;
 	top: 50%;
-	margin-top: -24px;
-	width: 48px;
-	height: 48px;
+	margin-top: -15px;
+	width: 30px;
+	height: 30px;
 	background: #F0F2F5;
 	border-radius: 24px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	font-size: 20px;
-	line-height: 1;
+	line-height: 1.5;
 	color: #757575;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
+}
+.feedzy-accordion-item .feedzy-accordion__icon .dashicons{
+	line-height: 1.5;
 }
 .feedzy-accordion-item .feedzy-accordion__icon.feedzy-accordion__icon--success{
 	width: 24px;
@@ -235,6 +247,8 @@
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
+	font-size: 10px !important;
+	margin-right: 5px;
 }
 .feedzy-accordion .feedzy-accordion-item .is-active .feedzy-accordion__step-number{
 	opacity: 1;
@@ -299,6 +313,7 @@
 	height: auto;
 	min-height: 48px;
 	padding-top: 2px;
+	line-height: 0;
 }
 
 .fz-form-wrap .form-control:focus {
@@ -378,6 +393,16 @@ fieldset[disabled] .form-control {
 }
 .fz-input-group .fz-input-group-right .dropdown-toggle{
 	min-width: 150px;
+}
+.fz-input-group .fz-insert-tags{
+	top: 7px;
+	right: 10px;
+}
+.fz-input-group .fz-insert-tags button.dropdown-toggle {
+	padding: 5px 20px;
+	border: 2px solid;
+	border-radius: 5px;
+	min-width: auto;
 }
 .fz-input-group .help-text{
 	padding-top: 8px;
@@ -976,6 +1001,13 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 }
 .tag-list .tagify{
 	border: 0;
+}
+.fz-form-wrap .tagify>.tagify__tag{
+	margin: 5px 7px 7px;
+}
+.fz-form-wrap .tagify .tagify__tag .tagify__input,
+.fz-form-wrap .tagify .tagify__input{
+	padding: 5px;
 }
 .fz-form-wrap .tagify__tag{
 	position: relative;
