--- a/js/FeedzyBlock/style.scss
+++ b/js/FeedzyBlock/style.scss
@@ -1,6 +1,7 @@
 .wp-block-feedzy-rss-feeds-feedzy-block {
 	.feedzy-source-wrap {
 		position: relative;
+		width: max-content;
 	}
 	.feedzy-source {
 		margin-right: 10px;
@@ -221,4 +222,9 @@
     font-size: 13px;
     line-height: 1.4em;
     color: #3c434a;
+}
+.feedzy-validation-results {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
