--- a/css/settings.css
+++ b/css/settings.css
@@ -2808,3 +2808,54 @@ button.feedzy-action-button {
 	flex-direction: row;
 	gap: 0.5rem;
 }
+
+.fz-logs-header-title {
+	display: flex;
+	flex-direction: row;
+	gap: 0.5rem;
+	align-items: baseline;
+}
+
+.fz-block__column {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.fz-group__row {
+	display: flex;
+	flex-direction: row;
+	gap: 1rem;
+	align-items: center;
+}
+
+.fz-group__left {
+	justify-content: flex-end;
+}
+
+.btn-outline-primary.fz-is-destructive {
+	color: #cc1818;
+	border-color: #cc1818;
+}
+
+.btn-outline-primary.fz-is-destructive:hover {
+	color: #cc1818;
+	border-color: #cc1818;
+	box-shadow: inset 0 0 0 1px #cc1818, inset 0 0 0 2px #f7f9fd;
+	background: #fdf7f7;
+}
+
+.fz-log-file-size-wrapper {
+	display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    align-items: baseline;
+}
+
+.fz-log-file-size-wrapper .dashicons {
+	font-size: 1.9em;
+}
+
+.fz-hidden {
+	display: none;
+}
