--- a/css/settings.css
+++ b/css/settings.css
@@ -270,8 +270,10 @@
 	border-bottom: 0;
 }
 .fz-form-wrap .form-label{
-	display: block;
+	display: flex;
 	margin-bottom: 8px;
+	align-items: center;
+	gap: 10px;
 }
 
 .fz-form-wrap .form-control {
@@ -2599,4 +2601,14 @@ li.draggable-item .components-panel__body-toggle.components-button{
 	.support-box-list > ul{
 		grid-template-columns: repeat(2, 1fr);
 	}
+}
+
+.fz-license-badge {
+	padding: 2px 8px;
+	font-size: 10px;
+	text-transform: uppercase;
+	border-radius: 5px;
+	letter-spacing: 0.5px;
+	color: #ffffff;
+	background: linear-gradient(135deg, #4268CF 0%, #3458BC 100%);
 }
