feat: allow more option in feedzy free

--- a/css/settings.css
+++ b/css/settings.css
@@ -2512,7 +2512,7 @@ li.draggable-item .components-panel__body-toggle.components-button{
 	padding: 24px 0;
 }
 
-.fz-condition-control.is-upsell {
+.is-upsell {
 	opacity: 0.6;
 }
 
