fix: image display on `auto` or `no` image options for Loop

--- a/js/FeedzyLoop/editor.scss
+++ b/js/FeedzyLoop/editor.scss
@@ -8,6 +8,11 @@
             width: 100%;
         }
     }
+
+    // Note: Hide generated invalid Core Image blocks
+    .wp-block-image:has( :is( img:not([src]), img[src=""] ) ) {
+        display: none;
+    }
 }
 
 .fz-condition-control {
