--- a/js/FeedzyLoop/editor.scss
+++ b/js/FeedzyLoop/editor.scss
@@ -229,3 +229,21 @@ input[type="text"].fz-input-field:disabled {
         outline: 1px solid #0000001a;
     }
 }
+
+.fz-block-variation {
+    .block-editor-block-variation-picker__variations {
+        flex-wrap: nowrap;
+    }
+    .block-editor-block-variation-picker__variations>li {
+        width: 35%;
+    }
+}
+
+.fz-block-variation-picker {
+    display: flex;
+    justify-content: space-between;
+
+    &> .components-button svg {
+       max-width: 70px;
+    }
+}
